--- a/users.css
+++ b/users.css
@@ -3,11 +3,38 @@
 	background: transparent url('images/userBG.jpg') top left repeat-x;
 }
 
+.topContent {
+	height:385px;
+}
+
 #help {
-	height:410px;
+
 }
 
 #categories {
+}
+
+#categoriesList {
+		
+}
+
+#helpList {
+	
+}
+
+.pillar {
+	width:270px;
+}
+
+.pillar .heading {
+	padding-left:5px;
+	vertical-align: super;	
+}
+
+.left, .right {
+	width:49%;
+	float:left;
+	clear:none;
 }
 
 #left, #middle, #right {
@@ -16,12 +43,17 @@
 	clear:none;	
 }
 
+.bottomContent {
+	clear:both;
+	width:100%;	
+}
 
 /* Header Box Markup */
 .headerBox {
 	background:transparent url('images/boxHeader.png') top left no-repeat;
 	padding:10px;
 	margin:10px 10px;
+	min-height:50px;
 }
 
 .headerBox a.header {
@@ -38,7 +70,7 @@
 }
 
 .headerBox ul li {
-	padding-bottom:5px;	
+	padding:5px 0px;	
 }
 
 .headerBox .posted {
@@ -87,20 +119,19 @@
 }
 
 /* Floating Icons Layout */
-
 #users {
 	top:120px;
 	left:-20px;	
 }
 
+#toggle {
+	top:345px;
+	left:760px;	
+}
+
 #project {
 	top:200px;
 	left:150px;
-}
-
-#rcp {
-	top:370px;
-	left:380px;
 }
 
 #portals {
@@ -118,16 +149,6 @@
 	left:490px;
 }
 
-#plugins {
-	top:180px;
-	left:620px;
-}
-
-#consulting {
-	top:265px;
-	left:725px;
-}
-
 #training {
 	top:275px;
 	left:290px;
@@ -136,11 +157,6 @@
 #documentation {
 	top:390px;
 	left:120px;
-}
-
-#toggle {
-	top:345px;
-	left:760px;	
 }
 
 #enterprise {
@@ -169,7 +185,10 @@
 }
 
 /* Swap View Markup */
+	
 .swap {
+	width:260px !important;
+	text-align:left !important;
 }
 
 #toggleText {
@@ -184,11 +203,13 @@
 
 .visible {
 	visibility:visible;
+	display: inherit;
 }
 
 .invisible {
 	opacity:0;
 	visibility: hidden;
+	display:none;
 }
 
 
