--- a/users.css
+++ b/users.css
@@ -7,6 +7,10 @@
 	height:385px;
 }
 
+img  {
+	behavior: url('/eclipse.org-common/themes/Phoenix/iepngfix.htc');	
+}
+
 #help {
 
 }
@@ -26,6 +30,9 @@
 	width:270px;
 	clear:both;
 }
+
+.pillar a img {
+}	
 
 .pillar .heading {
 	padding-left:5px;
