--- a/users.css
+++ b/users.css
@@ -5,7 +5,7 @@
 
 .topContent {
 	position:relative;
-	height:345px;
+	height:375px;
 }
 
 img  {
@@ -87,4 +87,9 @@ img  {
 #getinvolved {
 	top:180px;
 	left:20px;
+}
+
+#eclipselabs {
+	left:500px;
+	top:300px;	
 }
