--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,29 @@ box-shadow: 5px 5px 5px #b8b8b8;}
 .topContent {background: url("../images/background.jpg") repeat-x scroll left top;padding: 90px 0px 0 21px;position:relative;}
 .addthis_toolbox { position:absolute;right:40px;top:30px;background-color:rgba(255,2137,255,0.5);	border: 1px solid #e9e4f1;padding:6px 8px 1px 8px;	border: 1px solid #e9e4f1;}
 .box_content {padding-right:88px;position:relative;	width: 340px;}
+
 .box_icon {
 	position:absolute;
-	top:40px;
-	right:13px;
 	background-color:rgba(255,2137,255,0.1);
 	border:1px solid #e4e4ee;
 	padding:3px;
+	top:3px; right:8px; left:auto;
 }
+.box_icon span{display:block;background:#f96241;padding:3px;text-align:center;margin-bottom:8px;display:none;}
+.box_icon a{display:block;}
+.box_icon a:link, .v2 .box_icon  a:visited, .v2 .box_icon  a:active{color:#fff;}
+.box_icon a:hover{background:#f96241;text-decoration: none;}
+
+/*ID*/
+#box_user_newto{background:url("../images/bg_box2_01.jpg") #fff bottom no-repeat;}
+#box_user_support{background:url("../images/bg_box2_02.jpg") #fff bottom no-repeat;}
+#box_user_community{background:url("../images/bg_box2_03.jpg") #fff bottom no-repeat;clear:left;}
+#box_user_involved{background:url("../images/bg_box2_04.jpg") #fff bottom no-repeat;}
 
 #link_bugs{text-transform: uppercase;}
+
+
+/*Overwrite tags*/
 .box_user h2 {
 	padding: 5px;
 	background: rgb(28,2,73); /* Old browsers */
@@ -35,24 +48,10 @@ box-shadow: 5px 5px 5px #b8b8b8;}
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1c0249', endColorstr='#af9fce',GradientType=1 ); /* IE6-9 */
 	color:#fff;	
 }
-
-
 #novaContent .box_content ul {margin-bottom: 8px;}
 #novaContent .box_content ul li {margin-left:25px;}
 
-
-
-#box_user_newto{background:url("../images/bg_box2_01.jpg") #fff bottom no-repeat;}
-#box_user_support{background:url("../images/bg_box2_02.jpg") #fff bottom no-repeat;}
-#box_user_community{background:url("../images/bg_box2_03.jpg") #fff bottom no-repeat;clear:left;}
-#box_user_involved{background:url("../images/bg_box2_04.jpg") #fff bottom no-repeat;}
-.box_icon{top:3px; right:8px; left:auto;}
-.box_icon span{display:block;background:#f96241;padding:3px;text-align:center;margin-bottom:8px;display:none;}
-.box_icon a{display:block;}
-.box_icon a:link, .v2 .box_icon  a:visited, .v2 .box_icon  a:active{color:#fff;}
-.box_icon a:hover{background:#f96241;text-decoration: none;}
-
-
+/*DEPRECATED*/
 .bigger li{font-size:13.5px;line-height:20px;}
 .bigger h2{font-size:20px;padding:7px;}
 .bigger .box_user{height: 282px;}
